--- a/public/404.html
+++ b/public/404.html
@@ -108,6 +108,7 @@
 
 </div>
   </div>
+      <script type="text/javascript">console.log("you hit a bad page!");</script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
   <script type="text/x-mathjax-config">
